# aoc24-vis

./: Cargo.toml  README.md  index.html  package-lock.json  shandiff  webpack.config.js
day15/: Cargo.toml  package-lock.json
day15/src/: input.rs  lib.rs
day16/: webpack.config.js
maze-gen/src/: lib.rs
