[workspace]
resolver = "2"
members = ["day15", "day16"]

[profile.release]
lto = true

[workspace.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[workspace.dependencies.web-sys]
version = "0.3.77"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'DedicatedWorkerGlobalScope',
    'console',
]
